--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:support-v13:26.1.0'
 }
 repositories {
     mavenCentral()
