--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:support-v13:26.1.0'
+    implementation 'com.google.android.gms:play-services-maps:11.6.0'
 }
 repositories {
     mavenCentral()
